--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ requires-python = ">=3.9"
 dependencies = [
     "torch>=2.0.0",
     "numpy>=1.24.0",
+    "pandas>=2.0.0",
     "scikit-learn>=1.2.0",
     "matplotlib>=3.7.0",
     "rich>=13.0.0",
     "shap>=0.41.0",
     "networkx>=2.8.0",
     "numba>=0.59.0",
+    "statsmodels>=0.14.0",
+    "neuralforecast>=1.6.0",
 ]
 authors = [
     { name = "Emanuele Nardone", email = "emanuele.nardone@unicas.it" }
